Revision history for Graphics-ColorNames-Netscape:

{{$NEXT}}
  [Incompatabilities]
  - Split into separate distribution from Graphics-ColorNames