@@ -3,3 +3,8 @@ Revision history for Graphics-ColorNames-Netscape:
 {{$NEXT}}
   [Incompatabilities]
   - Split into separate distribution from Graphics-ColorNames
+
+  [Documentation]
+  - Use archive.org link to original web page.
+
+  - Updated contributor names.
